# base64-stream

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: from_base64_reader.rs  from_base64_writer.rs  lib.rs  to_base64_reader.rs  to_base64_writer.rs
tests/: from_base64_reader.rs  from_base64_writer.rs  to_base64_reader.rs  to_base64_writer.rs
tests/data/: decode_output.txt  encode_output.txt
