[package]
name = "base64-stream"
version = "1.2.21"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/base64-stream"
homepage = "https://magiclen.org/base64-stream"
keywords = ["base64", "stream", "file", "reader", "writer"]
categories = ["encoding"]
description = "To encode/decode large data with the standard Base64 encoding."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = "0.21"
generic-array = "0.14"

[dependencies.educe]
version = ">=0.4.0"
features = ["Debug"]
default-features = false