[package]
name = "base64-stream"
version = "5.0.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/magiclen/base64-stream"
homepage = "https://magiclen.org/base64-stream"
keywords = ["base64", "stream", "file", "reader", "writer"]
categories = ["encoding"]
description = "To encode/decode large data with the standard Base64 encoding."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = "0.22"